2000-08-02  Kent Boortz  <kent@swox.com>

	* mpfr: Integrated experimental version of mpfr-0.4.
	* configure.in: Changes for option --enable-mpfr.
	* Makefile.am: Changes for option --enable-mpfr.

2000-08-01  Torbjorn Granlund  <tege@swox.com>

	* mpn/generic/popcount.c: Disable SPARC v9 popc_limb pattern.
	* mpn/generic/hamdist.c: Likewise.

2000-08-01  Kevin Ryde  <kevin@swox.se>

	* mpn/tests/try.c (try_init): Account for ALIGNMENTS when sizing
	source and dest regions.

2000-07-31  Torbjorn Granlund  <tege@swox.com>

	* mpf/get_str.c: Develop three extra digits, not just one.

2000-07-31  Kevin Ryde  <kevin@swox.se>

	* gmp.texi (References): Add URL for invariant division.

2000-07-30  Kevin Ryde  <kevin@swox.se>

	* tune/time.c (speed_cpu_frequency_proc_cpuinfo): Add support for
	alpha linux "cycle frequency".

	* mpn/sparc64/gmp-mparam.h: Re-run tune program for FFT thresholds.

2000-07-29  Kevin Ryde  <kevin@swox.se>

	* gmp.texi (ABI and ISA): Add sparc64-*-linux*.
	* configure.in [sparc64-*-linux*] (gmp_cflags64_gcc): Same flags
	as under solaris.

	* configure.in (--enable-fft): New option, default "no".
	* gmp.texi (Build Options): Describe it.
	* mpn/generic/{mul,mul_n}.c [WANT_FFT]: Use it.
	* tune/tuneup.c [WANT_FFT]: By default don't probe FFTs if not enabled.
	* NEWS: Multiplication optionally using FFT.

	* tune/README: Notes on FFT and GCD thresholds, other minor updates.

	* Makefile.am: Expunge the macos generated files update stuff.

2000-07-28  Kevin Ryde  <kevin@swox.se>

	* mpn/x86/*/gmp-mparam.h: Add some FFT thresholds.

2000-07-28  Kent Boortz  <kent@swox.se>

	* macos/Asm*, macos/CmnObj, macos/Mp*: Delete directories.
	* macos/Makefile: Delete file.
	* macos/Makefile.cw: Delete file.
	* macos/config.h: Delete file.
	* macos/Asm/*.s: Delete files.
	* macos/configure: Create target directories. Don't transform
	'(C)' to '(;)' in a 'dnl' line comment in .asm file.
	* Makefile.am: Delete macos targets.